--- a/templates/linda.html
+++ b/templates/linda.html
@@ -2,8 +2,9 @@
 {% block body %}
     <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="/static/css/video_style.css">
+<link rel="stylesheet" type="text/css" href="/static/css/linda.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/static/js/linda.js"></script>
     <body>
     <style>
         .button1 {
@@ -83,207 +84,27 @@
                 </ul>
             </div>
 
+<br>
 
-            <script>
+            <!-Digital Clock->
+            <button id="show-clock" onclick="showClock()">Show Digital Clock</button>
+            <div class="container" id="clock">
 
-            //Todo List
-            function showTodo(){
-                document.getElementById("todo-list").style.display = "block";
-            }
+                <meta charset="UTF-8" />
+                <meta name="viewport" content=
+                        "width=device-width,
+        initial-scale=1.0" />
 
-            //Images Toggle, code from Shreya
-            function changeImage() {
+            <link rel="stylesheet" href="/static/css/linda.css">
 
-                if (document.getElementById("imgClickAndChange").src.includes('lindaWithMask'))
-                {
-                    document.getElementById("imgClickAndChange").src = "/static/assets/lindaWithoutMask.jpg";
-                }
-                else{
-                    document.getElementById("imgClickAndChange").src ="/static/assets/lindaWithMask.jpg"
-                }
-            }
+            <div id="clock">8:10:45</div>
 
-            //Random Motivational Quote Api
-            function newQuote(){
-                $.ajax(settings).done(function (response) {
-                    console.log(response);
-                    document.getElementById("display-quote").innerText = response;
-                });
-            }
-            const settings = {
-                "async": true,
-                "crossDomain": true,
-                "url": "https://motivational-quotes1.p.rapidapi.com/motivation",
-                "method": "POST",
-                "headers": {
-                    "content-type": "application/json",
-                    "x-rapidapi-host": "motivational-quotes1.p.rapidapi.com",
-                    "x-rapidapi-key": "9e3f40a0cemshcced0bdaa85f0c0p1e3309jsnbb4748bd1d8c"
-                },
-                "processData": false,
-                "data": {
-                    "key1": "value",
-                    "key2": "value"
-                }
-            };
+            <script src="/static/js/clock.js"></script>
 
-            $.ajax(settings).done(function (response) {
-                console.log(response);
-                document.getElementById("display-quote").innerText = response;
-            });
-
-            var taskInput = document.getElementById("new-task"); //new-task
-            var addButton = document.getElementsByTagName("button")[0]; //first button
-            var incompleteTasksHolder = document.getElementById("incomplete-tasks"); //incomplete-tasks
-            var completedTasksHolder = document.getElementById("completed-tasks"); //completed-tasks
-
-            //New Task List Item
-            var createNewTaskElement = function(taskString) {
-                //Create List Item
-                var listItem = document.createElement("li");
-
-                //input (checkbox)
-                var checkBox = document.createElement("input"); // checkbox
-                //label
-                var label = document.createElement("label");
-                //input (text)
-                var editInput = document.createElement("input"); // text
-                //button.edit
-                var editButton = document.createElement("button");
-                //button.delete
-                var deleteButton = document.createElement("button");
-
-                //Each element needs modifying
-
-                checkBox.type = "checkbox";
-                editInput.type = "text";
-
-                editButton.innerText = "Edit";
-                editButton.className = "edit";
-                deleteButton.innerText = "Delete";
-                deleteButton.className = "delete";
-
-                label.innerText = taskString;
-
-                //Each element needs appending
-                listItem.appendChild(checkBox);
-                listItem.appendChild(label);
-                listItem.appendChild(editInput);
-                listItem.appendChild(editButton);
-                listItem.appendChild(deleteButton);
-
-                return listItem;
-            }
-
-            //Add a new task
-            var addTask = function() {
-                console.log("Add task...");
-                //Create a new list item with the text from #new-task:
-                var listItem = createNewTaskElement(taskInput.value);
-                //Append listItem to incompleteTasksHolder
-                incompleteTasksHolder.appendChild(listItem);
-                bindTaskEvents(listItem, taskCompleted);
-
-                taskInput.value = "";
-            }
-
-            //Edit an existing task
-            var editTask = function() {
-                console.log("Edit task...");
-
-                var listItem = this.parentNode;
-
-                var editInput = listItem.querySelector("input[type=text");
-                var label = listItem.querySelector("label");
-
-                var containsClass = listItem.classList.contains("editMode");
-
-                //if the class of the parent is .editMode
-                if (containsClass) {
-                    //Switch from .editMode
-                    //label text become the input's value
-                    label.innerText = editInput.value;
-                } else {
-                    //Switch to .editMode
-                    //input value becomes the label's text
-                    editInput.value = label.innerText;
-                }
-
-                //Toggle .editMode on the list item
-                listItem.classList.toggle("editMode");
-
-            }
-
-            //Delete an existing task
-            var deleteTask = function() {
-                console.log("Delete task...");
-                var listItem = this.parentNode;
-                var ul = listItem.parentNode;
-
-                //Remove the parent list item from the ul
-                ul.removeChild(listItem);
-            }
-
-            //Mark a task as complete
-            var taskCompleted = function() {
-                console.log("Task complete...");
-                //Append the task list item to the #completed-tasks
-                var listItem = this.parentNode;
-                completedTasksHolder.appendChild(listItem);
-                bindTaskEvents(listItem, taskIncomplete);
-            }
-
-            //Mark a task as incomplete
-            var taskIncomplete = function() {
-                console.log("Task incomplete...");
-                //Append the task list item to the #incomplete-tasks
-                var listItem = this.parentNode;
-                incompleteTasksHolder.appendChild(listItem);
-                bindTaskEvents(listItem, taskCompleted);
-            }
-
-            var bindTaskEvents = function(taskListItem, checkBoxEventHandler) {
-                console.log("Bind list item events");
-                //select taskListItem's children
-                var checkBox = taskListItem.querySelector("input[type=checkbox]");
-                var editButton = taskListItem.querySelector("button.edit");
-                var deleteButton = taskListItem.querySelector("button.delete");
-
-                //bind editTask to edit button
-                editButton.onclick = editTask;
-
-                //bind deleteTask to delete button
-                deleteButton.onclick = deleteTask;
-
-                //bind checkBoxEventHandler to checkbox
-                checkBox.onchange = checkBoxEventHandler;
-            }
-
-            // var ajaxRequest = function() {
-            // 	console.log("AJAX request");
-            // }
-
-            //Set the click handler to the addTask function
-            addButton.addEventListener("click", addTask);
-            //addButton.addEventListener("click", ajaxRequest);
-
-            //cycle over incompleteTasksHolder ul list items
-            for (var i = 0; i < incompleteTasksHolder.children.length; i++) {
-                //bind events to list item's children (taskCompleted)
-                bindTaskEvents(incompleteTasksHolder.children[i], taskCompleted);
-            }
-
-            //cycle over completedTasksHolder ul list items
-            for (var i = 0; i < completedTasksHolder.children.length; i++) {
-                //bind events to list item's children (taskIncomplete)
-                bindTaskEvents(completedTasksHolder.children[i], taskIncomplete);
-            }
-
-
-            </script>
         </div>
         </div>
     </div>
     </body>
+
 
 {% endblock %}
