--- a/templates/pranavi.html
+++ b/templates/pranavi.html
@@ -1,22 +1,66 @@
 {% extends "layouts/project.html" %}
 {% block body %}
     <!DOCTYPE html>
+    <h1 id="abt_name"> Pranavi Inukurti </h1>
 
-    <h1 id="abt_name"> Pranavi Inukurti</h1>
+    </head>
+    <body style="background-image: url('/static/assets/saathvikaBG.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
+    <div style="margin: 2% 5% 5%; text-align:center; font-family: monospace; font-size: larger" >
+        <div>
+            <h1 style="background-color: #FDF5CE; font-family: 'Blippo'; font-size: 22px; text-align: center; padding: 15px; color: #6C464F;">This is Pranavi Inukurti's Individual Homepage!</h1>
+                <p style="background-color: #FDF5CE">
+                    <img src="/static/assets/withmask.jpg" style="height: 350px; width: auto;" id="imgClickAndChange" onclick="changeImage()" alt="change"/>
+                    <br>
+                </p>
+            <h2 style="background-color: #FDF5CE; font-family: 'Blippo'; font-size: 15px; text-align: center; padding: 10px; color: #6C464F;">Click Image to Unmask Me!</h2>
+            <h3 style="background-color: #FDF5CE; font-family: 'Blippo'; font-size: 20px; text-align: left; padding: 15px; color: #6C464F;">Links to Work for the Trimester:
+                <a id="journal" href="https://docs.google.com/document/d/1PGcv6fkv8A5Y1uzuN-iLSGm9CKhdWEL_fQRZyGv9ymI/edit?usp=sharing">Daily Journal,</a>
+                <a id="journal" href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite,</a>
+                <a id="journal" href="https://www.figma.com/file/9CvmDXms787Ban053NP0Gf/StudyOwl?node-id=4%3A2">StudyOwl Wireframes,</a>
+                <a id="journal" href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit?usp=sharing">TPT (Create Task Planning)</a>
+            </h3>
+
+        </div>
+    </div>
+    </body>
+    </html>
+
     <style>
         body{
-            background: #a9dbb7;
+            background: #FCE587;
         }
 
         #abt_name {
-            font-family: 'Blippo';
+            font-family: 'Ephesis';
             font-size: 60px;
             text-align: center;
             padding: 15px;
-            color: #ede9f3;
-            text-shadow: 5px 5px #33268a;
+            color: white;
+            text-shadow: 3px 3px #220901;
+        }
+
+
+        #imgClickAndChange {
+            position:center;
+            left:38rem;
+            border: px solid #232C33;
         }
 
     </style>
+
+    <script>
+        function changeImage() {
+
+            if (document.getElementById("imgClickAndChange").src.includes('/static/assets/withmask.jpg'))
+            {
+                document.getElementById("imgClickAndChange").src = "/static/assets/withoutmask.jpg";
+            }
+            else{
+                document.getElementById("imgClickAndChange").src ="/static/assets/withmask.jpg"
+            }
+        }
+    </script>
+</head>
+</html>
 
 {% endblock %}
