fixed my homepage format

--- a/templates/rohan.html
+++ b/templates/rohan.html
@@ -19,6 +19,11 @@
     <h1 style="text-align: center">
         Rohan Gaikwad Home Page
     </h1>
+    <div
+            class="container; center-block"
+            style="margin: 2% 5% 5%; text-align: center; font-family: gilroy, serif">
+        <div class="col-0">
+        </div>
 <!--        {outcome(0)}-->
         </br>
         <button onclick="BeanieToggle()">Change Beanie</button>
