--- a/templates/connor.html
+++ b/templates/connor.html
@@ -49,6 +49,7 @@
                             <a href="https://docs.google.com/document/d/1yMnRk0cY8TWYl3YKTgz0OKkrI5Gac4pEyoyiffEeUoE/edit?usp=sharing"> Journal </a>
                         </p>
                 </td>
+
             </tr>
             </tr>
             </tbody>
@@ -73,6 +74,7 @@
                 </td>
             </table>
             </div>
+</div>
 </div>
 {% endblock %}
 </html>
