create task link

--- a/templates/about_us/sanjay.html
+++ b/templates/about_us/sanjay.html
@@ -27,7 +27,7 @@ Sanjay Bharadwaj
                 <td> <a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/commits?author=SanjayB06">Commits</a> </td>
                 <td> <a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/projects/1?card_filter_query=assignee%3Asanjayb06">Scrum Board Tasks</a> </td>
                 <td><a target="_blank" href="https://docs.google.com/document/d/1utBhod9HOMFYtKowLyFNyT5Rc6tgHKbGJc-yEbY509U/edit?usp=sharing">Pair Journal</a></td>
-                <td><a target="_blank" href="https://docs.google.com/document/d/1utBhod9HOMFYtKowLyFNyT5Rc6tgHKbGJc-yEbY509U/edit#bookmark=id.76sqakcgpzf5">Create Task Plan</a></td>
+                <td><a target="_blank" href="https://github.com/SimonBrunzell/flask_portfolio/issues/41">Create Task Plan</a></td>
             </tr>
         </table>
         <button class="btn" id="toggler" onclick="changePic()">No Mask</button>
