Gavin - Home Page Background

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -144,6 +144,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
+<style>
+    body{
+        background-image: url("http://wonderfulengineering.com/wp-content/uploads/2014/09/blue-wallpaper-20.jpg");
+    }
+</style>
 {% endblock %}
 
 </html>
