--- a/templates/pokemon_cards.html
+++ b/templates/pokemon_cards.html
@@ -6,6 +6,13 @@
     <title>Pokemon Cards</title>
 </head>
 <body>
-{{ pokemoncard['name'] }}
+
+<table>
+    <tr>
+        <th>{{ pokemoncard['name'] }}</th>
+        <th></th>
+    </tr>
+</table>
+
 </body>
 </html>
