Gavin - About Me Page Journal

--- a/templates/GavinAboutMe.html
+++ b/templates/GavinAboutMe.html
@@ -103,10 +103,15 @@
                         border-radius: 10px;
                         text-align: center;
                         font-weight: 600;
-                        background-color: #0e387a ;
+                        background-color: #1261A0 ;
                         text-decoration: none;">
                         <a class="button1" href="/GavinAboutMe/">New Show</a>
                     </button>
+                    <br><br><br><br><br>
+                    <b style="font-size: large">Click on book below for my pair share journal</b>
+                    <p><a href="https://docs.google.com/document/d/1bz69bZUXveOjDREpvgvM_BcSK2rspoDvrIt0UUoQAxs/edit?usp=sharing">
+                    <img src="/static/assets/journal.jpg" width="200">
+                    </a>
                 </div>
             </div>
 
