jason api and deployment test stuff

--- a/templates/jason.html
+++ b/templates/jason.html
@@ -36,6 +36,15 @@
             return false;
         }
     </script>
+    "text":"<img width="40" height="40" src="https://i2.wp.com/nintendoeverything.com/wp-content/uploads/star-wars-hunters-trailer.jpg?resize=40%2C40&#038;ssl=1" class='widgets-list-layout-blavatar' alt="Star Wars: Hunters debut gameplay trailer" data-pin-nopin="true" />"
+    "url":"https://nintendoeverything.com/star-wars-hunters-debut-gameplay-trailer/"
+    "source":"NintendoEverything"
+    "publication":"https://nintendoeverything.com/"
+
+    "text":"New Book of Boba Fett Trailer Hints At Filling Major Gap In Star Wars Canon"
+    "url":"https://comicbook.com/starwars/news/new-book-boba-fett-trailer-major-star-wars-canon-timeline-hole-explained/"
+    "source":"Comicbook"
+    "publication":"https://comicbook.com/"
 
 {% endblock %}
 
